--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nodemailer": "latest",
+    "pdfjs-dist": "^5.4.394",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
